fix: Hide all scrollbars

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,6 +61,21 @@ body {
 		Oxygen, Ubuntu, Cantarell, sans-serif;
 	font-weight: 400;
 	color: #ffffff;
+	user-select: none;
+}
+
+/* Hide scrollbar for all browsers */
+/* For Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+	display: none;
+}
+/* For Firefox */
+* {
+	scrollbar-width: none;
+}
+/* For IE, Edge */
+* {
+	-ms-overflow-style: none;
 }
 
 h1,
